--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -29,6 +29,8 @@ $font-main: 'Noto Sans', 'Roboto', 'Arial', sans-serif;
 $color-main: black;
 $color-aspect: #fddd38;
 $color-aspect-sub: #fdc038;
+$color-link-1: #ffb300;
+$color-link-2: #ff7800;
 
 // text colors
 $color-text: #1d1d1d;
