--- a/css/src/fonts.scss
+++ b/css/src/fonts.scss
@@ -2,34 +2,22 @@
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 400;
-    font-display: swap;
-    src: url(../font/noto-sans-normal.woff2) format('woff2');
+    src: url(../font/noto-sans-normal.eot); // IE9 Compat Modes
+    src: url(../font/noto-sans-normal.eot?#iefix) format('embedded-opentype'), // IE6-8
+         url(../font/noto-sans-normal.woff2) format('woff2'),
+         url(../font/noto-sans-normal.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'Noto Sans';
-    font-style: italic;
-    font-weight: 400;
     font-display: swap;
-    src: url(../font/noto-sans-italic.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
     font-family: 'Noto Sans';
     font-style: normal;
     font-weight: 700;
-    font-display: swap;
-    src: url(../font/noto-sans-bold.woff2) format('woff2');
+    src: url(../font/noto-sans-bold.eot); // IE9 Compat Modes
+    src: url(../font/noto-sans-bold.eot?#iefix) format('embedded-opentype'), // IE6-8
+         url(../font/noto-sans-bold.woff2) format('woff2'),
+         url(../font/noto-sans-bold.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-    font-family: 'Noto Sans';
-    font-style: italic;
-    font-weight: 700;
     font-display: swap;
-    src: url(../font/noto-sans-bold-italic.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
